refactor all occurrences of findAll() JPA repository method